test/sema/trait_objects/coerce_impl_to_impl_var_err.yl
// RUN: compiler %s 2>&1 -res-dump | filecheck %s
trait A {}

trait B : A {}

trait C {}

struct S {
  x: *impl A
}

fn foo(a: *impl A, b: *impl B) {
  // CHECK: [[# @LINE + 1 ]]:20: error: an expression of type '*impl B' cannot be used to initialize a variable of type '*impl C'
  let x: *impl C = b;

  // CHECK: [[# @LINE + 1 ]]:20: error: an expression of type '*impl A' cannot be used to initialize a variable of type '*impl B'
  let y: *impl B = a;
}

fn main() {}
